--- a/styles/app.css
+++ b/styles/app.css
@@ -46,6 +46,7 @@
  --emerald-700: #264c50;
  --emerald-800: #163539;
  --emerald-900: #0c2427;
+ --emerald-5000: #46b4b5;
 
  --tangerine-50: #feeae3;
  --tangerine-100: #ffdaca;
@@ -57,6 +58,8 @@
  --tangerine-700: #d26447;
  --tangerine-800: #c14828;
  --tangerine-900: #91361e;
+
+ --tiger-400: #f97f68;
 
  --cranberry-50: #faeff1;
  --cranberry-100: #f5e6e9;
@@ -75,6 +78,7 @@
  --neutral-500: #a1929a;
  --neutral-600: #8f7d87;
  --warning-700: #b45309;
+ --grey-300: #d3d5db;
  --grey-400: #9da3af;
  --grey-600: #4d5561;
  --grey-700: #384050;
