added apiVersion to sanity

--- a/styles/app.css
+++ b/styles/app.css
@@ -125,7 +125,7 @@
  font-family: "Bon Vivant";
  font-style: normal;
  font-weight: 400;
- src: url("https://et-fonts.s3.amazonaws.com/bonvivant.woff") format("woff");
+ src: url("/fonts/bonvivant/bonvivant.woff") format("woff");
  font-display: swap;
 }
 html {
